--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <label for="searchBar">Search</label>
             <input
               type="search"
-              class="search-bar"
+              class="search-bar"e
               id="searchBar"
               placeholder="🔍  Search"
             >
